fix: homepage card width on safari

--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -124,7 +124,7 @@ main section h2 {
 
 .card {
   flex-grow: 1;
-  flex-basis: content;
+  flex-basis: auto;
 }
 
 .card .text {
